src/app/globals.css
/*@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap')
@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap')*/
@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');


@font-face {
  font-family: 'sitka';
  src:  url('/font/sitka-small-599.ttf') format('ttf'),
  url('/font/sitka-small-652.ttf') format('ttf'),
  url('/font/sitka-small-815.ttf') format('ttf');
}

:root{
  --background: #e2f0ed;
  --background-2: #f9fbff;
  --primary: #343a40;
  --secondary: #fff;
  --text: var(--primary);
  --text-title: #158e83;
  --text-hero: #fff;
  /*--background: #b1c6af;
  --background-2: #c3e0c1;
  --primary: #241d13;
  --secondary: #cc6128;
  --text: var(--primary);
  --text-title: var(--secondary);*/
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Sitka Text', serif;
  letter-spacing: -0.2px;
  overflow-x: hidden;
  scrollbar-width: thin;
  background-color: var(--background-2);
}

* {
  box-sizing: border-box;
  font-family: 'Sitka Display' !important;
  color: var(--text);
}

main {
  padding: 5rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
}

code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
}

.container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}


.description{
  font-family: 'Indie Flower', cursive;
  font-size: 20px;
  border-radius: 10px;
}

.banner{
  display: flex;
  width: 100vw;
  min-height: 500px;
  flex-direction: column;
  box-sizing: content-box;
  border: 1px solid red;
}


footer{
  position: fixed;
  bottom: 0;
  right: 5px;
  font-family: monospace;
}


.swiper-slide-shadow{
  display: none !important;
}

.swiper-slide{
  opacity: 0.2;
}

.swiper-slide-active{
  opacity: 1;
}

.MuiTab-textColorPrimary.Mui-selected{
  color: var(--text-title) !important;
}

.MuiTabs-indicator{
  background-color: var(--text-title) !important;
}

.MuiButton-contained{
  border: 0 !important;
  background-color: var(--text-title) !important;
}

.MuiButton-contained *{
  color: white;
}

